<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="45dp"
    android:animateLayoutChanges="true">

    <FrameLayout
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background_placeholder_lottie"
            app:tint="?colorSecondaryContainer" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/img_bdictionary_logo_transparent"
            android:layout_gravity="center"/>

    </FrameLayout>



    <TextView
        android:id="@+id/side_nav_title_textview_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:fontFamily="@font/baloo_bhaijaan"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:id="@+id/side_nav_app_version_textview_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1.0 - Ava"
        android:layout_gravity="center"
        android:fontFamily="serif-monospace"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"/>

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="?colorError"
            android:backgroundTint="?colorErrorContainer"/>




    </LinearLayout>

</LinearLayout>