<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.TranslationInnerFragmentAdditional"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/word_type_layout_id">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/word_type"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textStyle="italic" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/word_type_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/meaning"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textStyle="bold" />
    </LinearLayout>







    <LinearLayout
        android:id="@+id/definition_en_layout_container_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/def"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textStyle="italic" />


        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/definition_en_layout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>









    <LinearLayout
        android:id="@+id/definition_bn_container_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/def_bangla"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textStyle="italic" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/definition_bn_layout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>




</LinearLayout>