<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.TranslationInnerFragmentMain"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/bn_syns_layout_id">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bengali_synonyms"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textStyle="italic"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bangla_syns_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/meaning"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textStyle="bold" />
    </LinearLayout>







    <LinearLayout
        android:id="@+id/en_syns_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/english_synonyms"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textStyle="italic" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/english_syns_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/meaning"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textStyle="bold" />

    </LinearLayout>









    <LinearLayout
        android:id="@+id/ants_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/antonyms"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textStyle="italic" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/english_ants_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/meaning"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textStyle="bold" />
    </LinearLayout>








    <LinearLayout
        android:id="@+id/sents_layout_container_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sentences"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textStyle="italic" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/sentences_layout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>




</LinearLayout>