<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    app:cardCornerRadius="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">



        <FrameLayout
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/quiz_question_mark"
                android:layout_gravity="center"/>
        </FrameLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhaijaan"
            android:text="@string/quiz"
            android:textSize="18sp" />


        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp">


                <com.google.android.material.chip.Chip
                    android:id="@+id/quiz_start_number_of_qurstions_chip_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:checkedIconEnabled="false"
                    app:closeIcon="@drawable/ic_arrow_drop_down"
                    android:text="@string/number_of_questions_10"
                    app:closeIconEnabled="true"
                    android:layout_marginBottom="16dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/focus_on"
                    android:fontFamily="@font/baloo_bhaijaan"/>


                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/quiz_start_chip_group_id">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Words"
                        android:id="@+id/quiz_start_words_chip_id"
                        app:checkedIcon="@drawable/ic_round_check_24"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:checkable="true"
                        android:checked="true"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Idioms"
                        android:id="@+id/quiz_start_idioms_chip_id"
                        app:checkedIcon="@drawable/ic_round_check_24"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:checkable="true"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Proverbs"
                        android:id="@+id/quiz_start_proverbs_chip_id"
                        app:checkedIcon="@drawable/ic_round_check_24"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:checkable="true"/>


                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Prepositions"
                        android:id="@+id/quiz_start_prepositions_chip_id"
                        app:checkedIcon="@drawable/ic_round_check_24"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:checkable="true"/>

                </com.google.android.material.chip.ChipGroup>







            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="end"
            android:layout_marginTop="18dp">



            <com.google.android.material.button.MaterialButton
                android:id="@+id/quiz_dialog_cancel_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:theme="@style/ThemeOverlay.Material3.Button.TextButton"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/quiz_dialog_start_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                app:icon="@drawable/ic_round_arrow_right_alt_24"
                app:iconGravity="textEnd"/>

        </LinearLayout>




    </LinearLayout>


</com.google.android.material.card.MaterialCardView>